# QTcanteen

./: .gitignore  CMakeLists.txt  LICENSE  clientmainwindow.cpp  clientmainwindow.h  clientmainwindow.ui  dish.cpp  dish.h  faceenrolldialog.cpp  faceenrolldialog.h  facelogindialog.cpp  facelogindialog.h  jsonhelper.cpp  jsonhelper.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  merchantmainwindow.cpp  merchantmainwindow.h  merchantmainwindow.ui  networkclient.cpp  networkclient.h  networkserver.cpp  networkserver.h  opencvfacerecognizer.cpp  opencvfacerecognizer.h  order.cpp  order.h  orderdetaildialog.cpp  orderdetaildialog.h  orderitem.cpp  orderitem.h  registerwindow.cpp  registerwindow.h  registerwindow.ui  seetafacefacerecognizer.cpp  seetafacefacerecognizer.h
docs/: 01_登录注册模块.md  02_客户端模块.md  03_商家端模块.md  04_人脸识别模块.md  05_网络通信模块.md  06_数据模型模块.md  07_数据管理模块.md  LICENSE  NOTICE  README.md  餐厅点餐系统-服务结构.drawio
docs/LICENSES/: OpenCV-LICENSE.txt  Qt-LICENSE.txt
images/: .gitkeep
